--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -32,7 +32,7 @@ tooltip {
 
 #workspaces button.active {
     color: #a6adc8;
-    background: #eba0ac;
+    background: #4e48b5;
     border-radius: 10px;
 }
 
