--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -60,12 +60,17 @@ tooltip {
 #workspaces,
 #tray,
 #mpd,
+#custom-todos,
 #backlight {
     background: #1e1e2e;
     padding: 0px 10px;
     margin: 3px 0px;
     margin-top: 10px;
     border: 1px solid #181825;
+}
+
+#custom-todos {
+    padding-top: 5px;
 }
 
 #mpd {
